--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=hortilink
+
+# H2 em arquivo
+spring.datasource.url=jdbc:h2:file:./data/meubanco
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+
+# Console web do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
