--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,8 @@
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@tailwindcss/postcss": "^4.1.16",
+    "flowbite": "^3.1.2",
+    "flowbite-angular": "^20.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.16",
