--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@tailwindcss/postcss": "^4.1.16",
     "flowbite": "^3.1.2",
     "flowbite-angular": "^20.1.0",
+    "ngx-mask": "^20.0.3",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.16",
