Adiciona service de produtos

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -47,7 +47,13 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
@@ -102,4 +108,3 @@
     "analytics": "67a46e15-e1cc-4045-918a-aabc9b5b1368"
   }
 }
-
