Conecta o front com o back e cria novos elementos no front

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=create
 # Console web do H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+storage.location=./uploads
