--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,20 +23,22 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "^20.2.10",
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
+    "@angular/common": "^20.3.12",
+    "@angular/compiler": "^20.3.12",
+    "@angular/core": "^20.3.12",
+    "@angular/forms": "^20.3.12",
     "@angular/material": "^20.2.10",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/platform-browser": "^20.3.12",
+    "@angular/router": "^20.3.12",
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@tailwindcss/postcss": "^4.1.16",
+    "chart.js": "^4.5.1",
     "flowbite": "^3.1.2",
     "flowbite-angular": "^20.1.0",
     "ngx-mask": "^20.0.3",
+    "primeng": "^20.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -44,7 +46,7 @@
   "devDependencies": {
     "@angular/build": "^20.3.7",
     "@angular/cli": "^20.3.7",
-    "@angular/compiler-cli": "^20.3.0",
+    "@angular/compiler-cli": "^20.3.12",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.9.0",
